--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <title>odin-recepie</title>
 </head>
-<body>
+<body center>
     <h1>Odin Recepie</h1>
-    
+    <img src="./bucatar.jpg" width="400">
+    <p><strong><a href="./recipes/lasagna.html">Lasagna</a></strong></p>
         
 </body>
 </html>
