Added a recepie for spaghetti and cheesecake

--- a/index.html
+++ b/index.html
@@ -4,10 +4,13 @@
     <meta charset="UTF-8">
     <title>odin-recepie</title>
 </head>
-<body center>
+<body>
     <h1>Odin Recepie</h1>
-    <img src="./bucatar.jpg" width="400">
-    <p><strong><a href="./recipes/lasagna.html">Lasagna</a></strong></p>
-        
+    <img src="./bucatar.jpg" width="300">
+    <ol>Food
+        <li><a href="./recipes/lasagna.html">Lasagna</a></li>
+        <li><a href="./recipes/spagheti.html">Spagheti</li>
+        <li><a href="./recipes/cheesecake.html">Cheesecake</a></li>
+    </ol>        
 </body>
 </html>
