--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
     <h1>Odin Recepie</h1>
     <img src="./bucatar.jpg" width="300">
-    <ol>Food
+    <ol><h2>Best food in the world!</h2>
         <li><a href="./recipes/lasagna.html">Lasagna</a></li>
         <li><a href="./recipes/spagheti.html">Spagheti</li>
         <li><a href="./recipes/cheesecake.html">Cheesecake</a></li>
