Adding basic CSS after one lesson

--- a/recipes/cheesecake.html
+++ b/recipes/cheesecake.html
@@ -2,13 +2,14 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
+        <link href="style.css" rel="stylesheet">
         <title>Cheesecake</title>
     </head>
     <body>
         <h1>Cheesecake</h1>
         <img src="../recipes pictures/cheesecake.jpg" alt="cheesecakes">
         <p>These white chocolate coated cheesecake truffles are decorated to look like cute little polar bear faces! They take a bit of time to make, but are a great special occasion treat!</p>
-        <ul><strong>Ingredients</strong>
+        <ul>Ingredients
             <li>8 ounces cream cheese, softened</li>
             <li>⅓ cup powdered sugar</li>
             <li>½ teaspoon vanilla extract</li>
@@ -22,7 +23,7 @@
             <li>2 tablespoons chocolate chips</li>
             <li>20 mini candy-coated chocolate pieces (such as mini M&Ms®)</li>
         </ul>
-        <ol><strong>Directions</strong>
+        <ol>Directions
             <li>Cream together cream cheese, powdered sugar, vanilla, almond extract, salt, and nutmeg in a bowl with an electric mixer until smooth. Mix in graham cracker crumbs until thoroughly combined. Cover and refrigerate, about 1 hour.</li>
             <li>Line a baking sheet with parchment paper. Remove truffle filling mixture from fridge. Scoop out 1 tablespoon truffle filling and roll into a ball. Place onto the prepared baking sheet. Repeat with remaining filling. Place pan back in the fridge, about 30 minutes.</li>
             <li>Place chopped white chocolate in a small microwave-safe bowl. Microwave white chocolate at 50% power until melted, stirring every 30 seconds, 1 to 2 minutes.</li>
