--- a/recipes/spagheti.html
+++ b/recipes/spagheti.html
@@ -2,6 +2,7 @@
 <html lang="en">
     <hear>
         <meta charset="utf-8">
+        <link href="style.css" rel="stylesheet">
         <title>Spagheti</title>
     </hear>
     <body>
