--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link href="style.css" rel="stylesheet">
     <title>odin-recepie</title>
 </head>
 <body>
@@ -11,6 +12,6 @@
         <li><a href="./recipes/lasagna.html">Lasagna</a></li>
         <li><a href="./recipes/spagheti.html">Spagheti</li>
         <li><a href="./recipes/cheesecake.html">Cheesecake</a></li>
-    </ol>        
+    </ol>    
 </body>
 </html>
